--- a/src/main/resources/view/AdminReports.fxml
+++ b/src/main/resources/view/AdminReports.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="650.0" prefWidth="950.0" style="-fx-background-color: #0f172a;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminReportsController">
+<AnchorPane prefHeight="650.0" prefWidth="950.0" style="-fx-background-color: #0f172a;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminReportsController">
     <children>
         <VBox layoutX="30.0" layoutY="30.0" spacing="25.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
             <children>
@@ -27,7 +27,7 @@
                                 <Label text="Visual data summaries and financial reports for the library system." textFill="#94a3b8" />
                             </children>
                         </VBox>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #a855f7; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-cursor: hand;" text="Export Full Report" />
+                        <Button mnemonicParsing="false" onAction="#exportReportOnAction" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #a855f7; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-cursor: hand;" text="Export Full Report" />
                     </children>
                 </HBox>
 
